# OceanDepth

./: ArchiveOldMain.c  CMakeLists.txt  OceanDepth.exe.lnk  PROGRESSION.md  README.md  identifiants.txt  main.c
Code/: main.c
Code/Save/: save.c  save.h
Code/combat/: combat.c  combat.h
Code/creature/: creature.c  creature.h
Code/globals/: globals.c  globals.h
Code/input/: input.c  input.h
Code/inventaire/: inventaire.c  inventaire.h
Code/marchand/: marchand.c  marchand.h
Code/player/: player.c  player.h
Code/render/: render.c  render.h
Code/save/: save.c  save.h  saveNames.txt
Code/saveGameFiles/: save.txt  save1.txt  save2.txt  save3.txt
Code/types/: types.h
Code/utils/: utils.c  utils.h
Code/world/: deco.c  deco.h  map_lt.c  map_lt.h  world.c  world.h
artTest/: artTest.c
